@@ -1,5 +1,5 @@
 #coding: utf-8
 
-__version__ = '0.3.23'
+__version__ = '0.3.24'
 
 from .db import *
